# mlir-tutorial

./: .clangd  .gitignore  1  MODULE.bazel  build_tutorial.sh  mlir-tutorial.code-workspace  mlir_lit_instruction.md  polly_to_llvm_exe.out
docs/: action_tracing_workflow.md  additional_notes_on_mlir.md  cmake_dialect_build.md  create_for_loop.md  debug_with_errs.md  git_cheatsheet.md  mlir_pass_workflow.md  mlir_reduce_usage.md  pdll_workflow.md  shell_io_redirect.md  tblgen_pass_and_mliroptmain.md  unrealized_conversion_cast_debugging.md  vscode_navigation_setup.md
lib/: CMakeLists.txt
lib/Analysis/ReduceNoiseAnalysis/: CMakeLists.txt  ReduceNoiseAnalysis.cpp
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp
lib/Dialect/Noisy/: CMakeLists.txt
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyOps.cpp  PolyOps.td  PolyReductionPatterns.cpp  PolyReductionPatterns.h  PolyTypes.td
lib/Transform/: CMakeLists.txt
lib/Transform/Affine/: AffineFullUnroll.cpp  CMakeLists.txt
lib/Transform/Arith/: ArithPatterns.cpp  ArithPatterns.h  BUILD  CMakeLists.txt  MulToAdd.pdll  MulToAddPdll.cpp  MulToShift.cpp  MulToShift.h  Passes.h  Passes.td
lib/Transform/Noisy/: BUILD  CMakeLists.txt  Passes.h  Passes.td  ReduceNoiseChecker.cpp  ReduceNoiseChecker.h
lib/Transform/Poly/: CMakeLists.txt  Passes.h  Passes.td  PolyConstOptimize.cpp  PolyConstOptimizer.h
lib/Utility/: CMakeLists.txt  CustomPrintIRHandler.cpp  CustomPrintIRHandler.hpp  DebugActionTag.h  DebugHelper.cpp  DebugHelper.h  PolyOptimizeAddAction.hpp  PolyOptmizeMulAction.hpp
scripts/: test_debug_live.py  verify_debug.py
tests/: CMakeLists.txt  MulToAdd_pdll_genreated_C.cpp  affine_loop_unroll_transformed.mlir  after_polly_to_llvm.ll  after_polly_to_llvm.mlir  after_polly_to_llvm.s  lit.cmake.cfg.py  mul-to-shift.mlir  mul-to-shift_transformed.mlir  mul_to_add_transformed.mlir  mul_to_add_transformed_peel_has_higher_priority.mlir  noisy_check_overflow_error.mlir  noisy_checker.mlir  noisy_checker_overflow.mlir  poly_const_optimize.mlir  poly_const_optimize_action.mlir  poly_reduce.mlir  poly_reduce_interesting.py  poly_syntax_failed_2.mlir  poly_syntax_failure.mlir  poly_syntax_with_materialization.mlir  poly_to_standard_transformed.mlir  sccp_transformed.mlir
tools/: CMakeLists.txt  tutorial-lsp-server.cpp  tutorial-opt.cpp  tutorial-reduce.cpp
